--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : https://www.linkedin.com/in/yue-li-47a784285/
+  linkedin         : yue-li-47a784285/
   dblp             : 
   orcid            : 
   pinterest        :
