--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Yue Li"
 description              : "Ph.D. in Geosensing Systems Engineering and Sciences"
-repository               : "LunaLeeYue/LunaLeeYue.github.io"
+# repository               : "LunaLeeYue/LunaLeeYue.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
