--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Yue Li"
-description              : "Ph.D. in Geosensing Systems Engineering and Sciences"
+description              : "Ph.D. student in Geosensing Systems Engineering and Sciences"
 # repository               : "LunaLeeYue/LunaLeeYue.github.io"
 google_scholar_stats_use_cdn : true
 
