--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  : code-ZxFK3f4pfb
 # Site Author
 author:
   name             : "Yue Li (李月)"
-  avatar           : "images/profile_yue.jpg"
+  avatar           : "images/yue_crop.jpg"
   bio              : "Research Assistant"
   location         : "Houston, TX, U.S."
   employer         :
